packages/beff-core/tests/snapshots/safe_to_change__tests__fail_disc_union.snap
---
source: packages/beff-core/tests/safe_to_change.rs
expression: "print_errors(from, to, &errors)"
---
from:

        export default {
            "/hello": {
                get: ():  {ok:false, data: number} => todo()
            }
        }
        
to:

        export default {
            "/hello": {
                get: (): {ok:false, data: boolean} => todo()
            }
        }
        

# Error at GET /hello:

Response body is not compatible.

```ts
type Old = {
    "data": number;
    "ok": false;
};
```

```ts
type New = {
    "data": boolean;
    "ok": false;
};
```

```ts
type Diff = {
    "data": boolean;
    "ok": never;
};
```

Previous clients will not support this potential response:

```js
{
    "data": true,
    "ok": false
};
```
