packages/beff-core/tests/snapshots/safe_to_change__tests__fail_disc_union_arr4.snap
---
source: packages/beff-core/tests/safe_to_change.rs
expression: "print_errors(from, to, &errors)"
---
from:

        export default {
            "/hello": {
                get: (): ["a1", number]|["a2", string] => todo()
            }
        }
        
to:

        export default {
            "/hello": {
                get: (): ["a1", number]|["a3", string] => todo()
            }
        }
        

# Error at GET /hello:

Response body is not compatible.

```ts
type Old = (["a1", number] | ["a2", string]);
```

```ts
type New = (["a1", number] | ["a3", string]);
```

```ts
type Diff = ((["a1", number] & (Not<["a1", number]> & Not<["a2", string]>)) | ((["a3", string] & (Not<["a1", number]> & Not<["a2", string]>)) & Not<["a1", number]>));
```

```ts
type Evidence = [("a3"), string];
```

Previous clients will not support this potential response:

evidence:

```js
[
    "a3",
    "abc"
];
```
