packages/beff-core/tests/snapshots/safe_to_change__tests__fail_disc_union_arr62.snap
---
source: packages/beff-core/tests/safe_to_change.rs
expression: "print_errors(from, to, &errors)"
---
from:

        export default {
            "/hello": {
                get: (): ["a2", {a:string[]}]|["a1", {a:number[]}] => todo()
            }
        }
        
to:

        export default {
            "/hello": {
                get: (): ["a2", {a?:string[]}]|["a1", {a:number[]}] => todo()
            }
        }
        

# Error at GET /hello:

Response body is not compatible.

```ts
type Old = (["a1", {
        "a": Array<number>;
    }] | ["a2", {
        "a": Array<string>;
    }]);
```

```ts
type New = (["a1", {
        "a": Array<number>;
    }] | ["a2", {
        "a"?: Array<string>;
    }]);
```

```ts
type Diff = ((["a1", {
        "a": Array<number>;
    }] & (Not<["a1", {
        "a": Array<number>;
    }]> & Not<["a2", {
        "a": Array<string>;
    }]>)) | ((["a2", {
        "a"?: Array<string>;
    }] & (Not<["a1", {
        "a": Array<number>;
    }]> & Not<["a2", {
        "a": Array<string>;
    }]>)) & Not<["a1", {
        "a": Array<number>;
    }]>));
```

```ts
type Evidence = [("a2"), {
        "a": undefined;
    }];
```

Previous clients will not support this potential response:

evidence:

```json
[
  "a2",
  {}
]
```
