packages/beff-core/tests/snapshots/safe_to_change__tests__fail_num.snap
---
source: packages/beff-core/tests/safe_to_change.rs
expression: "print_errors(from, to, &errors)"
---
from:

        export default {
            "/hello": {
                get: (): 555 => todo()
            }
        }
        
to:

        export default {
            "/hello": {
                get: (): number => todo()
            }
        }
        

# Error at GET /hello:

Response body is not compatible.

```ts
type Old = 555;
```

```ts
type New = number;
```

```ts
type Diff = Not<555>;
```

```ts
type Evidence = Not<(555)>;
```

Previous clients will not support this potential response:

evidence:

```js
4773992856;
```
